--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 PORT=8080
-DB_URI=mongodb+srv://daniDEV:iuyDfBUxaOha4Dmv@cluster0.avfx2ie.mongodb.net/dbapi?retryWrites=true&w=majority
+DB_URI=mongodb+srv://daniDEV:iuyDfBUxaOha4Dmv@cluster0.cgmh3x9.mongodb.net/dbapi?retryWrites=true&w=majority
