--- a/fly.toml
+++ b/fly.toml
@@ -1,8 +1,9 @@
-# fly.toml file generated for apishop on 2023-02-09T21:59:57-05:00
+# fly.toml file generated for apimyshop on 2023-03-19T20:58:43-05:00
 
-app = "apishop"
+app = "apimyshop"
 kill_signal = "SIGINT"
 kill_timeout = 5
+primary_region = "bog"
 processes = []
 
 [env]
